# embassy_st7789_test

./: Cargo.toml  Justfile  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
