[package]
name = "st7789_test"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "stm32g431kb",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "defmt",
    "tick-hz-32_768",
] }
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-rtt"], optional = true }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal-bus = "0.1.0"

# Graphics & Display
embedded-graphics = "0.8"
mipidsi = "0.9.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
profont = "0.7"
u8g2-fonts = { version = "0.4", features = ["embedded_graphics_textstyle"] }
heapless = "0.8"

[[bin]]
name = "st7789_test"
test = false
bench = false

[profile.dev.package."*"]
codegen-units = 1
opt-level = "s"

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
