[package]
name = "st7789_test"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "9ac77e9b4abb17337706908adfd1bcf743bb50b0" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "9ac77e9b4abb17337706908adfd1bcf743bb50b0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "9ac77e9b4abb17337706908adfd1bcf743bb50b0" }

[dependencies]
embassy-stm32 = { workspace = true, features = [
    "stm32g431kb",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { workspace = true, features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { workspace = true, features = ["tick-hz-32_768"] }

defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-rtt"], optional = true }


# Standard embedded dependencies
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.1.0"
heapless = "0.8"

# Graphics & Display
embedded-graphics = "0.8"
mipidsi = "0.9.0"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
profont = "0.7"

[[bin]]
name = "st7789_test"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
opt-level = "s"
lto = true

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = 0
strip = true

[features]
default = ["debug"]
real_cs = []
defmt = ["dep:defmt"]
debug = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
